--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -191,11 +191,11 @@ if __name__ == "__main__":
 end of main
 ```
 
-### Thead Event
+### Thread Event
 
-``` python
-# thread_event
-# thread_event
+threading 모듈에서는 thread간 간단한 통신을 위해서 `event`를 사용함.
+
+``` python# thread_event
 
 import time
 import logging
@@ -210,9 +210,10 @@ def first_wait(e1, e2):
         
         if event:
             logging.debug("e1 is set.")
-            time.sleep(3)
+            time.sleep(1)
             logging.debug("set e2")
             e2.set()
+    logging.debug('first exit')
             
 def second_wait(e2):
     while not e2.isSet():
@@ -221,7 +222,8 @@ def second_wait(e2):
         
         if event:
             logging.debug("e2 is set")
-        
+    logging.debug('second exit')
+    
 def main():
     e1 = threading.Event()
     e2 = threading.Event()
@@ -247,7 +249,6 @@ if __name__ == "__main__":
 조금 복잡하지만 실행 결과는 다음과 같음.
 ``` bash
 (MainThread) Wait ...
-(first) Event status : (False)
 (second) event status : (False)
 (first) Event status : (False)
 (second) event status : (False)
@@ -255,16 +256,17 @@ if __name__ == "__main__":
 (second) event status : (False)
 (first) Event status : (False)
 (second) event status : (False)
+(first) Event status : (False)
 (MainThread) end fo sleep(5)
 (MainThread) Set e1
 (first) Event status : (True)
 (first) e1 is set.
 (second) event status : (False)
-(second) event status : (False)
-(second) event status : (False)
 (first) set e2
+(first) first exit
 (second) event status : (True)
 (second) e2 is set
+(second) second exit
 (MainThread) Exit
 ```
 > 1. main thread에서 thread event 객체를 만듬
@@ -273,4 +275,165 @@ if __name__ == "__main__":
 > 4. 만약 `wait()`처럼 인자가 없다면 block 상태가 되고 event 가 발생할 때 까지 대기. 즉 While loop가 실행되지 않음
 > 5. e1 이 설정되면 first thread는 e2 를 설정하고 종료
 
-update : 2019-07-26. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
+
+### Thread Lock
+
+``` python
+# thread lock
+
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+def blocking_lock(lock):
+    logging.debug('start blocking lock')
+    
+    while True:
+        time.sleep(1)
+        lock.acquire()
+        try:
+            logging.debug("Grab it")
+            time.sleep(0.5)
+        finally:
+            logging.debug("Release")
+            lock.release()
+
+def nonblocking_lock(lock):
+    logging.debug("start nonblocking lock")
+    
+    attempt, grab = 0, 0
+    while grab < 3:
+        time.sleep(1)
+        logging.debug("Attempt")
+        success = lock.acquire(False)
+        
+        try:
+            attempt += 1
+            if success:
+                logging.debug("Grab it")
+                grab += 1
+        finally:
+            if success:
+                logging.debug("Release")
+                lock.release()
+    logging.debug("Attempt: %s, grab: %s" % (attempt, grab))
+
+def main():
+    lock = threading.Lock()
+    blocking = threading.Thread(target=blocking_lock, name="blocking", args=(lock,))
+    blocking.setDaemon(True)
+    blocking.start()
+    
+    nonblocking = threading.Thread(target=nonblocking_lock, name="nonblocking", args=(lock,))
+    nonblocking.start()
+    
+if __name__=="__main__":
+    main()
+```
+> 두개의 thread를 띄워서 lock을 잡도록 하였는데, blocking tread는 daemon 으로 동작하면서 lock을 잡을 때까지 blocking 상태로 되어 있는데 `acquire()`가 lock을 잡기위한 메서드임. `acquire()`에 인자가 없어 기본적으로 lock을 잡을때까지 block 됨  
+
+> nonblocking thread에서는 lock을 잡으려고 하는 시도와 lock을 얻은 횟수를 기록함. 그리고 3번 lock을 얻었으면 동작을 종료함.  
+`acquire(False)` 로 되어 있는데 인자가 `False`이기 때문에 block되지 않고 그대로 진행함.
+
+> 실행 결과는 다음과 같음.
+``` bash
+(nonblocking) start nonblocking lock
+(blocking) Grab it
+(nonblocking) Attempt
+(blocking) Release
+(nonblocking) Attempt
+(nonblocking) Grab it
+(nonblocking) Release
+(blocking) Grab it
+(blocking) Release
+(nonblocking) Attempt
+(nonblocking) Grab it
+(nonblocking) Release
+(blocking) Grab it
+(nonblocking) Attempt
+(blocking) Release
+(nonblocking) Attempt
+(nonblocking) Grab it
+(nonblocking) Release
+(nonblocking) Attempt: 5, grab: 3
+(blocking) Grab it
+(blocking) Release
+```
+
+
+### Thread Reentrant Lock
+
+재 진입 가능한 lock 이란 말인데, 특정 thread가 lock을 잡더라도 다른 thread에서 `acquire'를 할 수 있는 lock을 말함.
+
+``` python
+# thread rlock
+
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+RESOURCE = 0
+
+def set_reverse(lock):
+    logging.debug('Start batch')
+    
+    with lock:
+        logging.debug('Grab lock')
+        
+        if RESOURCE == 0:
+            set_one(lock, True)
+        else:
+            set_zero(lock, True)
+    logging.debug('Reversed')
+
+def set_zero(lock, end=False):
+    logging.debug('Start set zero')
+    
+    while True:
+        with lock:
+            logging.debug("grab lock and set RESOURCE to 0")
+            RESOURCE = 0
+            time.sleep(0.5)
+        time.sleep(1)
+        
+        if end:
+            break
+
+def set_one(lock, end=False):
+    logging.debug('Start set one')
+    
+    while True:
+        with lock:
+            logging.debug('grab lock and set RESOURCE to 1')
+            RESOURCE = 1
+            time.sleep(0.5)
+        time.sleep(1)
+        
+        if end:
+            break
+            
+def main():
+    lock = threading.RLock()
+                          
+    zero = threading.Thread(target=set_zero, name="zero", args=(lock,))
+    zero.setDaemon(True)
+    zero.start()
+
+    one = threading.Thread(target=set_one, name="one", args=(lock,))
+    one.setDaemon(True)
+    one.start()    
+                          
+    time.sleep(6)
+                          
+    reverse = threading.Thread(target=set_reverse, name="reverse", args=(lock,))
+    reverse.start()
+    
+if __name__=="__main__":
+    main()
+```
+
+update : 2019-07-28. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
