--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -436,4 +436,108 @@ if __name__=="__main__":
     main()
 ```
 
+> thread를 선안하는 lock을 정의할때 `threading.RLock()`을 사용했는데, `Re-entrant Lock`을 사용한다는 의미임. 사용법은 `threading.Lock()`과 동일함.
+zero thread와 one thread는 각 각 `RESOURCE`를 0과 1로 설정하는데, reverse thread에서 'RESOURCE'의 값에 따라  zero 혹은 one을 호출한다.
+
+> 이 예제에서는 세개의 thread 모두 공통된 lock을 사용하고 있는데, reverse thread에서 lock잡고 있으면 zero, one thread에서 lock을 얻기 위해 무한정 기다리게 됨. 그래서 이를 해결하기 위해 `re-entrant lock`을 사용하게 됨
+
+실행 결과는 다음과 같음
+``` bash
+(zero) Start set zero
+(zero) grab lock and set RESOURCE to 0
+(one) Start set one
+(one) grab lock and set RESOURCE to 1
+(zero) grab lock and set RESOURCE to 0
+(one) grab lock and set RESOURCE to 1
+(zero) grab lock and set RESOURCE to 0
+(one) grab lock and set RESOURCE to 1
+(zero) grab lock and set RESOURCE to 0
+(one) grab lock and set RESOURCE to 1
+(reverse) Start batch
+(zero) grab lock and set RESOURCE to 0
+(reverse) Grab lock
+(reverse) Start set one
+(reverse) grab lock and set RESOURCE to 1
+(reverse) Reversed
+(one) grab lock and set RESOURCE to 1
+(zero) grab lock and set RESOURCE to 0
+```
+
+
+### Thread Condition
+
+thread에서 제공하는 lock과 event를 섞어 놓은 듯한 `condition`이란 기능이 있는데, `condition`을 사용하면 모든 thread가 lock을 잡은 것처럼 멈춰 있게 되고, `notify`를 받게 되면 다시 동작을 하게됨.
+
+``` python
+# thread condition
+# thread condition
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+def receiver(condition):
+    logging.debug('Start receiver')
+    
+    with condition:
+        logging.debug('Waiting...')
+        condition.wait()
+        time.sleep(1)
+        logging.debug('End')
+
+def sender(condition):
+    logging.debug('Start sender')
+    with condition:
+        logging.debug('Send notify')
+        condition.notifyAll()
+        logging.debug('End')
+
+def main():
+    condition = threading.Condition()
+    
+    for i in range(5):
+        t = threading.Thread(target=receiver, name="receiver %s" %i, args=(condition,))
+        t.start()
+        
+    send = threading.Thread(target=sender, name="sender", args=(condition,))
+    
+    time.sleep(1)
+    
+    with condition:
+        condition.notify(1)
+
+    time.sleep(3)
+    print('start send')
+    send.start()
+    
+if __name__ == "__main__":
+    main()  
+```
+
+> 실행 결과는 다음과 같은데, 먼저 5개의 thread를 만들어서 notify()를 기다리고 있골, 그 다음에 `notify(1)`을 보내서 하나의 thread를 종료, 그 이후 `notifyAll()`를 통해서 모든 thread를 종료함 (`notify(2)`를 하게되면 두개의 thread가 notify를 받게 됨)
+
+``` bash
+(receiver 0) Start receiver
+(receiver 0) Waiting...
+(receiver 1) Start receiver
+(receiver 1) Waiting...
+(receiver 2) Start receiver
+(receiver 2) Waiting...
+(receiver 3) Start receiver
+(receiver 3) Waiting...
+(receiver 4) Start receiver
+(receiver 4) Waiting...
+(receiver 0) End
+(sender) Start sender
+start send
+(sender) Send notify
+(sender) End
+(receiver 4) End
+(receiver 3) End
+(receiver 1) End
+(receiver 2) End
+```
+
+
 update : 2019-07-28. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
