--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -539,5 +539,48 @@ start send
 (receiver 2) End
 ```
 
+### Lock, Mutex, Semaphore
+
+``` pyhton
+# thread_semaphore
+
+import time
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+class ResourcePool():
+    def __init__(self):
+        self.active_thread_list = []
+        self.lock = threading.Lock()
+    def use(self, name):
+        with self.lock:
+            self.active_thread_list.append(name)
+            logging.debug("List of threas in resource pool : %s", self.active_thread_list)
+    def unuse(self, name):
+        with self.lock:
+            self.active_thread_list.remove(name)
+            logging.debug("List of threads in resource pool : %s", self.active_thread_list)
+            
+def worker(semaphonre, pool):
+    logging.debug("Waiting to enter the pool")
+    
+    with semaphonre:
+        logging.debug("Enther the pool")
+        thread_name = threading.currentThread().getName()
+        pool.use(thread_name)
+        time.sleep(1)
+        pool.unuse(thread_name)
+def main():
+    pool = ResourcePool()
+    semaphonre = threading.Semaphore(3)
+    for i in range(5):
+        t = threading.Thread(target=worker, name=("thread-%s" %i), args=(semaphonre,pool))
+        t.start()
+    
+if __name__ == "__main__":
+    main()
+```
 
 update : 2019-07-28. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
