--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -541,6 +541,8 @@ start send
 
 ### Lock, Mutex, Semaphore
 
+> python에서만 적용되는 개념인지는 모르겠지만, `lock`은 thread가 공용으로 접근하는 자원에 대해 무결성을 보장하기 위함이고, `mutex`는 `lock`과 유사하지만 여러 프로세스사이에서 적용되는 경우임 (즉 프로세스간 무결성의 보장). `semaphore`는 한번에 하나의 thread만 점유하는 것이 아닌 정해진 개수 만큼의 thread가 점유할 수 있음.
+
 ``` pyhton
 # thread_semaphore
 
@@ -583,4 +585,85 @@ if __name__ == "__main__":
     main()
 ```
 
-update : 2019-07-28. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
+> 실행하면 다음과 같은 결과를 볼 수 있는데, semaphore 를 세개까지 허용하기 때문에 resource pool 이 세개가 되면 하나가 pool에서 제거 되어야만 새로운 것을 추가할 수 있음.
+``` bash
+(thread-0) Waiting to enter the pool
+(thread-0) Enther the pool
+(thread-0) List of threas in resource pool : ['thread-0']
+(thread-3) Waiting to enter the pool
+(thread-4) Waiting to enter the pool
+(thread-4) Enther the pool
+(thread-2) Waiting to enter the pool
+(thread-3) Enther the pool
+(thread-1) Waiting to enter the pool
+(thread-4) List of threas in resource pool : ['thread-0', 'thread-4']
+(thread-3) List of threas in resource pool : ['thread-0', 'thread-4', 'thread-3']
+(thread-0) List of threads in resource pool : ['thread-4', 'thread-3']
+(thread-2) Enther the pool
+(thread-2) List of threas in resource pool : ['thread-4', 'thread-3', 'thread-2']
+(thread-4) List of threads in resource pool : ['thread-3', 'thread-2']
+(thread-1) Enther the pool
+(thread-3) List of threads in resource pool : ['thread-2']
+(thread-1) List of threas in resource pool : ['thread-2', 'thread-1']
+(thread-2) List of threads in resource pool : ['thread-1']
+(thread-1) List of threads in resource pool : []
+```
+
+### Thread Local Data
+
+> thread 간에 공유하지 않을 자원을 사용할 때 `threading.local()`을 사용한다.
+
+
+``` python
+# thread Local Data
+
+import logging
+import threading
+
+logging.basicConfig(level=logging.DEBUG, format="(%(threadName)s) %(message)s")
+
+def print_local_data(local_data):
+    try:
+        data = local_data.index
+    except:
+        logging.debug("Value not set yet.")
+    else:
+        logging.debug("value : %s" % data)
+
+def set_local_data(local_data, index):
+    print_local_data(local_data)
+    local_data.index = index
+    print_local_data(local_data)
+    
+def main():
+    local_data = threading.local()
+    print_local_data(local_data)
+    local_data.index = 0
+    print_local_data(local_data)
+    
+    for i in range(5):
+        t = threading.Thread(target=set_local_data, name=("thread-%s" % i), args=(local_data, i+1))
+        t.start()
+
+if __name__ == "__main__":
+    main()
+```
+> 실행하면 다음과 같은데, index를 thread간에 공유하지 않으므로 `Value not set yet`이 출력되게 됨.
+``` bash
+
+(MainThread) Value not set yet.
+(MainThread) value : 0
+(thread-0) Value not set yet.
+(thread-0) value : 1
+(thread-1) Value not set yet.
+(thread-2) Value not set yet.
+
+(thread-1) value : 2
+(thread-3) Value not set yet.
+(thread-4) Value not set yet.
+(thread-2) value : 3
+(thread-3) value : 4
+```
+
+
+update : 2019-07-30. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
