--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -191,11 +191,12 @@ if __name__ == "__main__":
 end of main
 ```
 
-### Thread Event
-
-threading 모듈에서는 thread간 간단한 통신을 위해서 `event`를 사용함.
-
-``` python# thread_event
+### Thread Event  
+  
+threading 모듈에서는 thread간 간단한 통신을 위해서 `event`를 사용함.  
+  
+``` python
+# thread_event
 
 import time
 import logging
