--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -666,5 +666,134 @@ if __name__ == "__main__":
 (thread-3) value : 4
 ```
 
+### Daemon Process
+  
+> Process도 Thread와 마찬가지로 daemon으로 동작하게 할 수 있음. 만드는 방법은 Thread와 같이 daemon 속성을 True로 설정하면 됨.  
+
+``` python
+# daemon process
+
+import time
+import multiprocessing
+
+def daemon():
+    print("Start")
+    time.sleep(5)
+    print("Exit")
+
+def main():
+    d = multiprocessing.Process(name="daemon", target=daemon)
+    d.daemon = True
+    
+    d.start()
+    time.sleep(3)
+    print("Main process terminated")
+    
+if __name__ == "__main__":
+    main()
+```
+> 실행하면 다음과 같이 main process가 종료된 이후에 daemon process가 종료됨  
+``` bash
+Start
+Main process terminated
+Exit
+```
+> 만약 daemon process 가 종료될 때 까지 기다리면 `join`을 사용하면 됨. 결과는 다음과 같음  
+``` bash
+Start
+Exit
+Main process terminated
+```
+
+### Process Exit  
+
+> Thread의 경우 process 내에서 자식으로 띄운 thread를 종료할 방법이 없었는데, process의 경우 child process를 강제로 종료 할 수도 있고 상태의 확인 및 수행 결과를 받을 수도 있음  
+
+``` python
+# process exit
+
+import sys
+import time
+import multiprocessing
+
+def good_job():
+    p = multiprocessing.current_process()
+    print("Start name: %s, pid:%s" % (p.name, p.pid))
+    time.sleep(5)
+    print("Exit name:%s, pid:%s" % (p.name, p.pid))
+    return 0
+
+def fail_job():
+    p = multiprocessing.current_process()
+    print("Start name: %s, pid:%s" % (p.name, p.pid))
+    time.sleep(5)
+    print("Exit name:%s, pid:%s" % (p.name, p.pid))
+    sys.exit(1)
+
+def kill_job():
+    p = multiprocessing.current_process()
+    print("Start name: %s, pid:%s" % (p.name, p.pid))
+    time.sleep(10)
+    print("Exit name:%s, pid:%s" % (p.name, p.pid))
+    return 0
+
+def main():
+    process_list = []
+    for func in [good_job, fail_job, kill_job]:
+        p = multiprocessing.Process(name=func.__name__, target=func)
+        process_list.append(p)
+        
+        print("Process check : %s, %s" % (p, p.is_alive()))
+        p.start()
+        time.sleep(0.3)
+        
+    for p in process_list:
+        print("process check : %s %s" % (p, p.is_alive()))
+    
+    time.sleep(5)
+    
+    for p in process_list:
+        print("Process check : %s %s" % (p, p.is_alive()))
+        
+        if p.is_alive():
+            print("Terminate process : %s" %p)
+            p.terminate()
+        
+    for p in process_list:
+        print("Process name: %s, exit code : %s" % (p.name, p.exitcode))
+        
+if __name__ == "__main__":
+    main()
+```
+
+> 소스가 길기는 하지만 실행 결과를 보면, `p.exitcode`를 통해서 process의 종료 상태를 확인 할 수가 있음 
+
+``` bash
+Process check : <Process(good_job, initial)>, False
+Start name: good_job, pid:5805
+Process check : <Process(fail_job, initial)>, False
+Start name: fail_job, pid:5808
+Process check : <Process(kill_job, initial)>, False
+Start name: kill_job, pid:5811
+process check : <Process(good_job, started)> True
+process check : <Process(fail_job, started)> True
+process check : <Process(kill_job, started)> True
+Exit name:good_job, pid:5805
+Exit name:fail_job, pid:5808
+Process check : <Process(good_job, stopped)> False
+Process check : <Process(fail_job, stopped[1])> False
+Process check : <Process(kill_job, started)> True
+Terminate process : <Process(kill_job, started)>
+Process name: good_job, exit code : 0
+Process name: fail_job, exit code : 1
+Process name: kill_job, exit code : None
+```
+
+### Process Event
+> thread 와 마찬가지로 이벤트를 사용할 수 있지만, thread에 있는 기능을 그대로 가고 온 것임.예제는 생략 :) 
+
+### Process Communication
+
+> Process는 event외에 `queue`와 `pipe`를 지원함.
 
 update : 2019-07-30. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
