--- a/_posts/2019-07-26-python_03.md
+++ b/_posts/2019-07-26-python_03.md
@@ -794,6 +794,74 @@ Process name: kill_job, exit code : None
 
 ### Process Communication
 
-> Process는 event외에 `queue`와 `pipe`를 지원함.
+> Process는 event외에 `queue`와 `pipe`를 지원하는데, 먼저 `Queue`를 사용한 예를 보면  
+
+``` python
+# process queue
+
+import time
+import multiprocessing
+
+def set_data(q):
+    p = multiprocessing.current_process()
+    msg = "Hello world"
+    q.put(msg)
+    print("[%s] set queue data : %s" %(p.name, msg))
+    
+def get_data(q):
+    time.sleep(1)
+    p = multiprocessing.current_process()
+    print("[%s] get queue data : %s" % (p.name, q.get()))
+
+def main():
+    queue = multiprocessing.Queue()
+    
+    p1 = multiprocessing.Process(name="set_data", target=set_data, args=(queue,))
+    p1.start()
+    
+    p2 = multiprocessing.Process(name="get_data", target=get_data, args=(queue,))
+    p2.start()
+    
+    p1.join()
+    p2.join()
+    
+if __name__ == "__main__":
+    main()
+```
+> 결과는 예상한대로, 그 외에도 목적에 따라 `SimpleQueue`, `JoinableQueue` 도 있음.
+``` bash
+[set_data] set queue data : Hello world
+[get_data] get queue data : Hello world
+```
+  
+> `pipe`를 사용한 예제를 보면  
+
+``` python
+# process pipe
+
+import multiprocessing
+
+def child(pipe):
+    p = multiprocessing.current_process()
+    
+    msg = "Hello World"
+    pipe.send(msg)
+    
+    print("[%s] send a message to pipe : %s" % (p.name, msg))
+    
+def main():
+    parent_pipe, child_pipe = multiprocessing.Pipe()
+    
+    p = multiprocessing.Process(name="child", target=child, args=(child_pipe,))
+    p.start()
+    
+    print("Received message : %s" % parent_pipe.recv())
+    p.join()
+    
+if __name__ == "__main__":
+    main()
+```
+
+
 
 update : 2019-07-30. 출처:[파이썬답게 코딩하기](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=143094231)
