--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "note 00"
+title: "Note_00"
 description: "memo, note"
 date: 2019-07-31
 tags: [memo]
@@ -23,3 +23,9 @@ share: false
 
 #### 함께 자라기
 > 한번 읽었는데, 다시 읽어야 ...
+
+#### 밑바닥 부터 시작하는 딥러닝 2
+> 아직 못봤다.
+
+#### 앵무새 죽이기
+> 한글 번역된거 읽음.(2019.07.30). 원서는 어디있는지 못 찾겠음.
