--- a/_posts/2019-08-01-docker_01.md
+++ b/_posts/2019-08-01-docker_01.md
@@ -10,13 +10,13 @@ share: false
 ### Docker
 
 #### 설치
-> 아래 주소를 참고해서 최신 정보에 맞도록 설치하는데, 정확히는 docker engine을 설치하는 것이 맞음 (linux kernel 3.10 이상이면 docker engine을 설치 가능)
+> 아래 주소를 참고해서 최신 정보에 맞도록 설치하는데, 정확히는 docker engine을 설치한다는 표현이 맞음 (linux kernel 3.10 이상이면 docker engine을 설치 가능)
 `https://docs.docker.com/install/linux/docker-ce/ubuntu/`
 
 #### 도커 이미지와 컨테이너
   
   * 도커 이미지
-  > 컨테이너를 생성할 때 필요한 요소인데, 가상 머신 생설할때 사용하는 iso와 비슷한 개념.
+  > 컨테이너를 생성할 때 필요한 요소인데, 가상 머신 생성할때 사용하는 iso와 비슷한 개념.
   * 도커 컨테이너
   > 도커 이미지를 사용하여 생성하는 파일 시스템 및 시스템 자원등이 있는 독립된 공간인데 하나의 도커 이미지로 여려개의 도커 컨테이너를 생성할 수 있음.  
   컨테이너는 이미지를 read only로 사용하게 되는데, 변경 사항이 있더더라도 컨테이너 계층에 저장하므로 원래 이미지에는 영향이 없음.
@@ -51,7 +51,7 @@ ubuntu              14.04               2c5e00d77a67        2 months ago        
 root@8c9a679a92ee:/#
 ```
 
-> `docker ps`를 통해서 현재 실행 중인 컨테이너 정보를 볼 수 가 있음. 다만 `exit`으로 바쪄 나온 경우 정보가 안보임.
+> `docker ps`를 통해서 현재 실행 중인 컨테이너 정보를 볼 수 가 있음. 다만 `exit`으로 빠져 나온 경우 정보가 안보임.
 ``` bash
 (base) :~/docker$ docker start -i  myubuntu
 root@8c9a679a92ee:/#
@@ -65,7 +65,7 @@ CONTAINER ID        IMAGE               COMMAND             CREATED             
 
 #### 컨테이너의 외부 노출
 
-> 14.04 이미지로 mywebserver라는 새로운 컨테이너를 생성하는데, `-p 80:80` 을 주어서 컨테이너의 포트를 호스트의 포트봐 바인딩 하라는 것.
+> 14.04 이미지로 mywebserver라는 새로운 컨테이너를 생성하는데, `-p 80:80` 을 주어서 컨테이너의 포트를 호스트의 포트와 바인딩 하라는 것.
 
 ```
 (base) :~/docker$ docker run -i -t --name mywebserver -p 80:80 ubuntu:14.04
