--- a/_posts/2019-09-04-github.md
+++ b/_posts/2019-09-04-github.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "진행중"
+title: "연습중"
 description: "memo, github"
 date: 2019-09-04
 tags: [memo]
@@ -9,10 +9,10 @@ share: false
 ---
 ### Github link
 
-유닛 테스트 `https://github.com/neguri/TAoUT`
+유닛 테스트 [`https://github.com/neguri/TAoUT`](https://github.com/neguri/TAoUT)
 
-문제 풀이 `https://github.com/neguri/dojo`
+문제 풀이 [`https://github.com/neguri/dojo`](https://github.com/neguri/dojo)
 
-코딩 연습 `https://github.com/neguri/dalin`
+코딩 연습 [`https://github.com/neguri/dalin`](https://github.com/neguri/dalin)
 
-리트 코드 `https://github.com/neguri/leetcode`
+리트 코드 [`https://github.com/neguri/leetcode`](https://github.com/neguri/leetcode)
