--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -12,14 +12,11 @@ share: false
 #### 파이썬 답게 코딩하기
 > 상당히 좋은, 파이썬 기본 문법을 익힌 상태에서 보면 좋은 책. (2019.07.31)
 
-#### 시작하세요! 도커
-> 아직 못봤다
-
 #### 탄탄한 파이썬 백엔드
 > 읽는 중.
 
 #### 실리콘 밸리 .. 데이타 과학
-> 아직 못봤다.
+> 구입만 하고, 아직 못봤다.
 
 #### 함께 자라기
 > 한번 읽었는데, 다시 읽어야 ...
@@ -33,7 +30,10 @@ share: false
 #### 리얼월드 HTTP
 > 읽는 중.
 
-  
+#### 더 탄탄하게 배우는 파이썬 3
+> 이런 책을 원했다.
+![파이썬3](https://image.aladin.co.kr/product/16368/90/cover500/8931555717_1.jpg){: width="50%" height="50%"}
+
 ### 참조 페이지  
 * python   
 `https://github.com/bt3gl/Python-and-Algorithms-and-Data-Structures`
