--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -42,7 +42,7 @@ share: false
 > 이런 책을 읽고 싶었다. 연습 문제가 많아서 좋다.
   
 #### 헤드퍼스트 디자인 패턴
-![headfirst](/images/design.jpg)
+![headfirst](/images/pattern.jpg)
 > 자바도 배우고 패턴도 배우려는, 두마리 토끼 잡으려다 하나도 못잡게 생겼다.
 
 ### 참조 페이지  
