--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "note"
+title: "책"
 description: "memo, note"
-date: 2019-09-04
+date: 2019-09-13
 tags: [memo]
 comments: false
 share: false
@@ -11,11 +11,11 @@ share: false
 
 #### 파이썬 답게 코딩하기
 ![pythonic](/images/pythonic.jpg)
-> 상당히 좋은, 파이썬 기본 문법을 익힌 상태에서 보면 좋은 책. (2019.07.31)
+> 상당히 좋은, 파이썬 기본 문법을 익힌 상태에서 보면 좋은 책이다.  이런 책을 쓴 저자와 출판사에 감사를..(2019.07.31)
 
 #### 탄탄한 파이썬 백엔드
 ![pythonback](/images/backend.jpg)
-> 읽는 중.
+> 읽는 중인데, 백엔드가 이렇게 생겼구나 라는 감을 잡을 수 있다.  SQL은 배워두면 백엔드든 임베디드든 써먹을데가 있겠다 싶다.
 
 #### 실리콘 밸리 .. 데이타 과학
 ![data](/images/data.jpg)
@@ -23,27 +23,37 @@ share: false
 
 #### 함께 자라기
 ![agile](/images/agile.jpg)
-> 한번 읽었는데, 다시 읽어야 ...
+> 한번 읽었는데, 다시 읽어야 ...  그리고 항상 그렇듯 읽는 것이 문제가 아니라 실천하는 것이 문제임.
 
 #### 밑바닥 부터 시작하는 딥러닝 2
 ![scratch](/images/scratch.jpg)
-> 아직 못봤다.
+> 아직 못봤다. 이렇게 될걸 굳이 예약까지 해서 주문해야 했나 싶다. 
 
-#### 앵무새 죽이기
-![HTTP](/images/mocking.jpg)
-> 한글 번역된거 읽음.(2019.07.30). 원서는 어디있는지 못 찾겠음.
 
 #### 리얼월드 HTTP
 ![HTTP](/images/http.jpg)
-> 읽는 중인데, web에 대한 기초가 없이 보기에는 어렵다.
+> 읽는 중인데, web에 대한 기초가 없이 보기에는 어렵다.  예제가 GO Lang으로 되어 있어서 좋다. 
 
 #### 더 탄탄하게 배우는 파이썬 3
 ![python3](/images/python3.jpg)
-> 이런 책을 읽고 싶었다. 연습 문제가 많아서 좋다.
+> 이런 책을 읽고 싶었다.
   
 #### 헤드퍼스트 디자인 패턴
 ![headfirst](/images/pattern.jpg)
-> 자바도 배우고 패턴도 배우려는, 두마리 토끼 잡으려다 하나도 못잡게 생겼다.
+> 자바도 배우고 패턴도 배우려는, 두마리 토끼 잡으려다 하나도 못잡게 생겼다.  책이 은근히 무거워 가방에 넣으면 어깨 빠질것 같다.
+
+#### 알고리즘 퍼즐 68
+![puzzle](/images/puzzle.jpg)
+> 내가 언제 책이 없어서 알고리즘 문제를 못 푼적이 있던가...  
+
+
+#### 앵무새 죽이기
+![mocking](/images/mocking.jpg)
+> 한글 번역된거 읽음.(2019.07.30). 원서는 어디있는지 못 찾겠음.
+
+#### 카라마조프가의 형제들
+![karamazov](/images/karamazov.jpg)
+> 읽으려고 시도한지 십년만에 읽었다.
 
 ### 참조 페이지  
 * python   
