--- a/_posts/2019-09-04-github.md
+++ b/_posts/2019-09-04-github.md
@@ -7,12 +7,37 @@ tags: [memo]
 comments: false
 share: false
 ---
-### Github link
+## Github link
 
-유닛 테스트 [`https://github.com/neguri/TAoUT`](https://github.com/neguri/TAoUT)
 
-문제 풀이 [`https://github.com/neguri/dojo`](https://github.com/neguri/dojo)
+### 코딩 연습 
 
-코딩 연습 [`https://github.com/neguri/dalin`](https://github.com/neguri/dalin)
+#### 파이썬
+* [플라스크](https://github.com/neguri/dalin/tree/master/python_study/flask)
+* [로깅과 아규먼트](https://github.com/neguri/dalin/blob/master/python_study/06_argment_logging.md)
+* [스타일,클로져,고차함수](https://github.com/neguri/dalin/blob/master/python_study/2019-07-20-python_00.md)
+* [데코레이터](https://github.com/neguri/dalin/blob/master/python_study/2019-07-23-python_01.md)
+* [이터레이터, 제너레이터](https://github.com/neguri/dalin/blob/master/python_study/2019-07-25-python_02.md)
+* [동시성-쓰레드](https://github.com/neguri/dalin/blob/master/python_study/2019-07-26-python_03.md)
+* [동시성-프로세스](https://github.com/neguri/dalin/blob/master/python_study/2019-07-30-python_04.md)
+* [비동기](https://github.com/neguri/dalin/blob/master/python_study/2019-07-31-python_05.md)
 
-리트 코드 [`https://github.com/neguri/leetcode`](https://github.com/neguri/leetcode)
+#### [디자인 패턴](https://github.com/neguri/dalin/tree/master/design_pattern)
+#### 함수형 프로그래밍
+* [씨 플러스 플러스](https://github.com/neguri/dalin/tree/master/functional/cpp)
+* [하스켈](https://github.com/neguri/dalin/tree/master/functional/haskell)
+#### [자바 스크립트](https://github.com/neguri/dalin/tree/master/js_study)
+#### [웹](https://github.com/neguri/dalin/tree/master/web_study)
+#### 씨 플러스 플러스
+* [템플릿](https://github.com/neguri/dalin/tree/master/cpp_study/template)
+
+### 문제 풀이 
+
+* [BOJ](https://github.com/neguri/dojo/tree/master/boj)
+* [pyKata](https://github.com/neguri/dojo/tree/master/pyKata)
+
+### 리트 코드 
+[`https://github.com/neguri/leetcode`](https://github.com/neguri/leetcode)
+
+### 유닛 테스트 
+[`https://github.com/neguri/TAoUT`](https://github.com/neguri/TAoUT)
