--- a/_posts/2019-08-01-docker_01.md
+++ b/_posts/2019-08-01-docker_01.md
@@ -80,32 +80,32 @@ enp0s3: flags=4163<UP,BROADCAST,RUNNING,MULTICAST>  mtu 1500
 ```
 
 update : 2019-08-31. 출처: [시작하세요 도커](https://www.aladin.co.kr/shop/wproduct.aspx?ItemId=106596706)
-
+  
+  
 
 > 도커의 이미지 확인
-``` bash
+```
 $ docker images
 REPOSITORY          TAG                 IMAGE ID            CREATED             SIZE
 ubuntu              latest              2ca708c1c9cc        3 weeks ago         64.2MB
 hello-world         latest              fce289e99eb9        9 months ago        1.84kB
-
 ```
 
-> 도커의 컨테이너 생성, 여기서 --name으로 이름 지정 가능 (여기서는 임의로 정했지만 web, db 와 같이 의미 있는 이름으로 지정하는 것이 좋다.))
-``` bash
+> 도커의 컨테이너 생성, 여기서 --name으로 이름 지정 가능 (여기서는 임의로 정했지만 web, db 와 같이 의미 있는 이름으로 지정하는 것이 좋다.)
+```
 $ sudo docker run --name neguri -i -t ubuntu /bin/bash
 root@cfac88840f8d:/# exit
 ```
 
 > 도커의 컨테이너 확인
-``` bash
+```
 $ docker ps -a
 CONTAINER ID        IMAGE               COMMAND             CREATED             STATUS                     PORTS               NAMES
 cfac88840f8d        ubuntu              "/bin/bash"         12 seconds ago      Exited (0) 5 seconds ago                       neguri
 ```
 
 > 중지된 컨테이너를 실행하고, attach를 사용하여 말 그대로 attach를 한다.
-``` bash
+```
 $ docker start neguri
 neguri
 $ docker attach neguri
@@ -116,7 +116,7 @@ root@cfac88840f8d:/#
 
 
 > 데몬 컨테이너 실행, -d 옵션을 주어서 실행한다.
-``` bash
+```
 $  docker run --name daemon_n -d ubuntu /bin/sh -c "while true; do echo hello world; sleep 1; done"
 159bbdf338740d9c521264322eb1968bcdf2741947ad7f9bc7aef770b63aa745
 
@@ -143,6 +143,6 @@ $ docker stop daemon_n
 ```
 
 > docker ps 외에도 docker inspect 명령어로 더 많은 정보를 출력할 수 있다.
-``` bash
+```
 $ docker inspect daemon_n
 ```
