--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -46,6 +46,10 @@ share: false
 ![puzzle](/images/puzzle.jpg)
 > 내가 언제 책이 없어서 알고리즘 문제를 못 푼적이 있던가...  
 
+#### A Tour of C++
+![C++](https://image.aladin.co.kr/product/17925/45/cover500/k402534131_1.jpg)
+> 현업에서 C++를 사용하지 않음에도 불구하고, 요즘 읽고 있다. (번역, 오탈자 말이 많은데 나는 잘 모르겠다.) 
+
 
 #### 앵무새 죽이기
 ![mocking](/images/mocking.jpg)
