Add algorithm training

--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -47,8 +47,13 @@ share: false
 > 내가 언제 책이 없어서 알고리즘 문제를 못 푼적이 있던가...  
 
 #### A Tour of C++
-![C++](https://image.aladin.co.kr/product/17925/45/cover500/k402534131_1.jpg)
+![C++](https://image.aladin.co.kr/product/17925/45/cover150/k402534131_1.jpg)
 > 현업에서 C++를 사용하지 않음에도 불구하고, 요즘 읽고 있다. (번역, 오탈자 말이 많은데 나는 잘 모르겠다.) 
+  
+  
+#### 알고리즘 트레이닝
+![algorithm](https://image.aladin.co.kr/product/19023/93/cover150/8966262449_1.jpg)
+> 내게 더 이상 알고리즘 책이 필요할 까 싶지만(알고리즘 문제를 잘 푸는 것이 아닌, 책만 많이 가지고 있다는 측면에서), 밤에 조금씩 읽고 있다.
 
 
 #### 앵무새 죽이기
