--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -53,7 +53,13 @@ share: false
   
 #### 알고리즘 트레이닝
 ![algorithm](https://image.aladin.co.kr/product/19023/93/cover150/8966262449_1.jpg)
-> 내게 더 이상 알고리즘 책이 필요할 까 싶지만(알고리즘 문제를 잘 푸는 것이 아닌, 책만 많이 가지고 있다는 측면에서), 밤에 조금씩 읽고 있다.
+> 내게 더 이상 알고리즘 책이 필요할 까 싶지만(알고리즘 문제를 잘 푸는 것이 아닌, 책만 많이 가지고 있다는 측면에서), 밤에 조금씩 읽고 있다.  그리고 요즘엔 파이썬으로 문제를 풀려고 연습 중인데,,,
+  
+  
+#### 인공지능을 위한 수학
+![math](https://image.aladin.co.kr/product/17400/4/cover150/896540228x_1.jpg)
+> 처음에 도서관에 있길래 빌려 봤는데, 내용이 괜찮아서 구입했다. 한번은 읽었는데, 수포자인 나로선 금새 잊어 버렸다.  
+
 
 
 #### 앵무새 죽이기
