--- a/_posts/2020-07-27.md
+++ b/_posts/2020-07-27.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: "오늘의 문장"
+description: "memo, github"
+date: 2020-07-27
+tags: [memo]
+comments: false
+share: false
+---
+
 ### 오늘의 문장
 
 > 지금 당장 하지 않는 다면 장차 할 확률은 절반 이하로 떨어 집니다. 새로운 일의 방식을 실험해 봅시다. __일단 30분만 업무 개선을 시도해 보는 겁니다.__ 이 부분에 이르면 워드 커닝햄의 명언을 인용하지 않을 수 없습니다. 
