--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -19,11 +19,11 @@ share: false
 
 #### 실리콘 밸리 .. 데이타 과학
 ![data](/images/data.jpg)
-> 구입만 하고, 아직 못봤다.
+> ~~구입만 하고, 아직 못봤다.~~ 조금씩 읽고 있다. 통계가 그리 따분한 것만은 아니다.
 
 #### 함께 자라기
 ![agile](/images/agile.jpg)
-> 한번 읽었는데, 다시 읽어야 ...  그리고 항상 그렇듯 읽는 것이 문제가 아니라 실천하는 것이 문제임.
+> ~~한번 읽었는데, 다시 읽어야~~ 두번 읽었다. 그리고 항상 그렇듯 읽는 것이 문제가 아니라 실천하는 것이 문제임.
 
 #### 밑바닥 부터 시작하는 딥러닝 2
 ![scratch](/images/scratch.jpg)
@@ -33,6 +33,7 @@ share: false
 #### 리얼월드 HTTP
 ![HTTP](/images/http.jpg)
 > 읽는 중인데, web에 대한 기초가 없이 보기에는 어렵다.  예제가 GO Lang으로 되어 있어서 좋다.
+  
 
 #### 더 탄탄하게 배우는 파이썬 3
 ![python3](/images/python3.jpg)
@@ -56,12 +57,13 @@ share: false
     
 #### 인공지능을 위한 수학
 ![math](https://image.aladin.co.kr/product/17400/4/cover150/896540228x_1.jpg)
-> 처음에 도서관에 있길래 빌려 봤는데, 내용이 괜찮아서 구입했다. 한번은 읽었는데, 수포자인 나로선 금새 잊어 버렸다.  
+> 처음에 도서관에 있길래 빌려 봤는데, 내용이 괜찮아서 구입했다. 한번은 읽었는데, 수포자인 나로선 금새 잊어 버렸다. 그런데 더 좋은 책이 나와버렸다.  
   
 #### 깐깐하게 배우는 C
 ![hardC](https://image.aladin.co.kr/product/13193/12/cover150/8966262155_1.jpg)
 > 책 쓴사람이 제드 쇼이다. 이 형님 책은 우선 읽고 시작한다.
-  
+   
+
 #### SQL 첫걸음
 ![SQL](https://image.aladin.co.kr/product/6902/53/cover150/8968482314_1.jpg)
 > 갑자기 SQL 사용할 일이 있어서 읽었다. 그런데 업무에선 INSERT와 UPDATE만 사용한다. (실습 위주긴 하지만 좀 지루하다.)
@@ -74,8 +76,24 @@ share: false
 
 #### Do it! HTML5 + CSS3 웹 표준의 정석
 ![HTML](https://image.aladin.co.kr/product/22267/44/cover150/k832636825_1.jpg)
-> 사내 온라인 교육 교재되어 있어 읽었다. HTML/CSS가 협업과는 관련 없지만 JS 공부하기 전에 교양을 쌓는 마음으로 읽었다.
+> 사내 온라인 교육 교재되어 있어 읽었다. HTML/CSS가 현업과는 관련 없지만 JS 공부하기 전에 교양을 쌓는 마음으로 읽었다.
   
+
+#### 다이내믹 프로그래밍 완전 정복
+![HTML](https://image.aladin.co.kr/product/20934/27/cover150/k592636173_1.jpg)
+> 책 표지에 `넌 이미 재귀를 능가갰다`라고 되어 있지만 여전히 재귀는 어렵다.
+  
+  
+#### 수학 리부트
+![HTML](https://image.aladin.co.kr/product/24353/27/cover150/8966262627_1.jpg)
+> 책 두께를 보고서 겁 먹을 수 있지만, 예상 외로 쉽다. (그렇다고 내가 수학을 잘 하는 것은 아니다. 그만큼 쉽게 잘 쓰여진 책이란 의미이다)
+  
+  
+#### 파이썬 알고리즘 인터뷰
+![HTML](https://image.aladin.co.kr/product/24549/58/cover150/k822631873_1.jpg)
+> 저자의 블로그를 이전 부터 보았었는데, 책이 나왔길래 사서 읽는 중이다. leet code 해답이야 검색하면 중국인 친구들이 해법을 많이 공개해 놓은 것을 쉽게 찾을 수 있지만, 개별 문제에 대한 접근 보다는 알고리즘을 전체적으로 정리한다는 느낌으로 읽어보기에 좋다.
+
+
 
 #### 앵무새 죽이기
 ![mocking](/images/mocking.jpg)
@@ -85,6 +103,8 @@ share: false
 ![karamazov](/images/karamazov.jpg)
 > 읽으려고 시도한지 십년만에 읽었다.
   
+
+
 ### 참조 페이지  
 * python   
 `https://github.com/bt3gl/Python-and-Algorithms-and-Data-Structures`
