--- a/_posts/2020-07-27-text.md
+++ b/_posts/2020-07-27-text.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "오늘의 문장"
-description: "memo, github"
+description: "memo"
 date: 2020-07-27
 tags: [memo]
 comments: false
