--- a/_posts/2019-07-31-note-00.md
+++ b/_posts/2019-07-31-note-00.md
@@ -81,7 +81,7 @@ share: false
 
 #### 다이내믹 프로그래밍 완전 정복
 ![HTML](https://image.aladin.co.kr/product/20934/27/cover150/k592636173_1.jpg)
-> 책 표지에 `넌 이미 재귀를 능가갰다`라고 되어 있지만 여전히 재귀는 어렵다.
+> 책 표지에 `넌 이미 재귀를 능가했다`라고 되어 있지만 여전히 재귀는 어렵다.
   
   
 #### 수학 리부트
